Fixing search bar alignment

--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -15,9 +15,8 @@ body {
     max-width: 100px;
 }
 #searchBar{
-    display: flex;
+    display:flex;
     align-items: flex-end;
-    flex-direction: column;
     justify-content: flex-end;
 }
 
